summer step | create bean definitions